Fix image size overflow on small screens.

--- a/src/app/pages/changelog/changelog.component.scss
+++ b/src/app/pages/changelog/changelog.component.scss
@@ -23,6 +23,10 @@ mat-card {
   color: $light-gray;
 }
 
+img {
+  max-width: 100%;
+}
+
 .grade-modifier {
   position: relative;
   top: 7px;
